# dccmd-rs

./: .env  .env.example  .gitignore  Cargo.toml  README.md  bacon.toml  test.txt
.github/workflows/: ci.yml  sonarcloud.yml
src/: main.rs
src/api/: auth.rs  constants.rs  errors.rs  mod.rs  models.rs
src/api/auth/: errors.rs  mod.rs  models.rs
src/api/auth/tests/: auth_ok.json
src/api/nodes/: download.rs  folders.rs  mod.rs  models.rs  nodes.rs  upload.rs
src/api/nodes/models/: filters.rs  mod.rs  sorts.rs
src/api/nodes/rooms/: mod.rs  models.rs
src/api/user/: account.rs  keypairs.rs  mod.rs  models.rs
src/api/utils/: mod.rs
src/cmd/: credentials.rs  mod.rs  models.rs
src/cmd/config/: credentials.rs  logs.rs  mod.rs  models.rs
src/cmd/groups/: mod.rs  models.rs  print.rs  users.rs
src/cmd/nodes/: download.rs  mod.rs  models.rs  share.rs  transfer.rs  upload.rs
src/cmd/nodes/download/: containers.rs  files.rs  mod.rs
src/cmd/nodes/upload/: files.rs  folders.rs  mod.rs
src/cmd/reports/: events.rs  mod.rs  models.rs  permissions.rs  print.rs
src/cmd/users/: auth.rs  mfa.rs  mod.rs  models.rs  print.rs
src/cmd/utils/: dates.rs  mod.rs  strings.rs
