[package]
name = "dccmd-rs"
version = "0.2.0"
edition = "2021"
description = "A command line client for DRACOON"
authors = ["Octavio Simone"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "dccmd-rs"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# DRACOON API
dco3 = "0.9.0"

# CLI helpers
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# async runtime and utils
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-recursion = "1"

# logging and tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# utils
chrono = "0.4"
thiserror = "1"
dotenv = "0.15"

# credentials
keyring = "2"