[package]
name = "dccmd-rs"
version = "1.0.0"
edition = "2021"
description = "A command line client for DRACOON"
authors = ["Octavio Simone"]
license = "MIT"
readme = "README.md"

[[bin]]
name = "dccmd-rs"
path = "src/main.rs"

[dependencies]
# DRACOON API
dco3 = "0.17.1"

# CLI helpers
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"
tabled = "0.17.0"

# async runtime and utils
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
async-recursion = "1"

# logging and tracing
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# utils
chrono = "0.4"
thiserror = "2"
serde = {version = "1", features = ["derive"]}
csv = "1"
dashmap = "6"
dirs = "5"

# credentials
keyring = "2"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/dccmd-rs", dest = "/usr/bin/dccmd-rs", mode = "755" },
]